<resources>
    <string name="app_name">Fundra</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="remember_me">Remember me</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="Sign_up">Sign up?</string>
    <string name="get_started">Get Started</string>
    <string name="i_agree_to_the_processing_of_personal_data">I agree to the processing of Personal data</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="home">Home</string>
    <string name="chatbot">chatbot</string>
    <string name="balance">balance</string>
    <string name="account">account</string>
    <string name="companies">Companies</string>
    <string name="projects">Projects</string>
    <string name="health">Health</string>
    <string name="education">Education</string>
    <string name="donation">Donation</string>
    <string name="Companies">Companies</string>
    <string name="wellcome_back">Wellcome Back</string>
    <string name="enter_your_full_name">Enter your full Name</string>
    <string name="sign">Sign Up</string>
    <string name="Back">back</string>
    <string name="back">Back</string>
    <string name="output_displayed_here">Output displayed here...</string>
    <string name="send">Send</string>
    <string name="ask_fundra">Ask Fundra...</string>
    <string name="chat_bot">Chat Bot</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="otp_code_verification">OTP Code Verification</string>
    <string name="we_have_an_otp_code_to_your_email_enter_the_otp_code_below_to_verify">We have an OTP code to your email Enter the OTP code below to verify</string>
    <string name="didn_t_receive_email_you_can_resend_code_in_50s">Didn’t receive email? You can resend code in 50s</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up_with">Sign_up with</string>
    <string name="face">face</string>
    <string name="google">google</string>
    <string name="micro">micro</string>
    <string name="we_have_send_an_otp_code_to_your_email_enter_the_otp_code_below_to_verify">We have send an OTP code to your email Enter the OTP code below to verify</string>
    <string name="available_balance">Available Balance</string>
    <string name="you_will_be_investing_in_immersed_through_an_spv_this_means_that_when_you_invest_you_will_be_signing_the_spv_subscription_agreement_not_the_direct_investment_contract"><![CDATA[You will be investing in Immersed through an SPV. This means that when you invest, you will be signing the SPV Subscription Agreement, not the direct investment contract.]]></string>
    <string name="convertible_note">Convertible Note</string>
    <string name="_200m_valiation_cap">$200M valiation cap</string>
    <string name="investment_terms">Investment Terms</string>
    <string name="invest">invest</string>
    <string name="raised_from_393_investors">raised from 393 investors</string>
    <string name="_2_279_700">$2,279,700</string>
    <string name="first_goal_hit_you_can_still_invest">FIRST GOAL HIT (you can still invest)</string>
    <string name="immersed">IMMERSED</string>
    <string name="back1">back</string>
    <string name="where_things_should_change">where things should change</string>
    <string name="service_charge">Service charge</string>
    <string name="total_amount">Total amount</string>
    <string name="Lokin">Lokin</string>
    <string name="The_profits_ARE_EXPECTED_TO_EXCEED_20">THE profits ARE EXPECTED TO EXCEED 20% !</string>
    <string name="Notifications">Notifications</string>
    <string name="Mark_as_read">Mark as read</string>
    <string name="Today">Today</string>
    <string name="account_title">Account</string>
    <string name="profile_image_description">User Profile Image</string>
    <string name="user_name">Ahmed ELhoriny</string>
    <string name="user_email">Ahmed454545@gmail.com</string>
    <string name="contact_details">Contact details</string>
    <string name="notification">Notification</string>
    <string name="selected_interests">Selected interests</string>
    <string name="deposit">Deposit</string>
    <string name="investments">Investments</string>
    <string name="verified_icon">Verified Icon</string>
    <string name="investments_page">Investments Page</string>
    <string name="deposit_page">Deposit Page</string>
    <string name="contact_details_page">Contact Details Page</string>
    <string name="notification_page">Notification Page</string>
    <string name="selected_interests_page">Selected Interests Page</string>
    <string name="Ahmed_Samh_Talaat_Fahmy">Ahmed Samy Talaat Fahmy</string>
    <string name="Ahmed454545_gmail_com">Ahmed454545@gmail.com</string>
    <string name="country_egypt">Country: Egypt</string>
    <string name="Street_Shoukry_street">Street: Shoukry street</string>
    <string name="Postal_Code_11511">Postal Code: 11511</string>
    <string name="Save_or_Edit_Icon">Save or Edit Icon</string>
    <string name="personal_details">personal_details</string>
    <string name="name_icon">Name Icon</string>
    <string name="ahmed_samy_talaat_fahmy">Ahmed Samy Talaat Fahmy</string>
    <string name="email_icon">Email Icon</string>
    <string name="ahmed454545_gmail_com">Ahmed454545@gmail.com</string>
    <string name="phone_icon">Phone Icon</string>
    <string name="_20_107_7777778">+20 107 7777778</string>
    <string name="country_icon">Country Icon</string>
    <string name="country_Egypt">Country: Egypt</string>
    <string name="city_icon">City Icon</string>
    <string name="City_Cairo">City: Cairo</string>
    <string name="street_icon">Street Icon</string>
    <string name="street_shoukry_street">Street: Shoukry street</string>
    <string name="website_icon">Website Icon</string>
    <string name="www_ahmedelhoriny_com">www.ahmedelhoriny.com</string>
    <string name="postal_code_icon">Postal Code Icon</string>
    <string name="postal_code_11511">Postal Code: 11511</string>
    <string name="save_or_edit_icon">Save or Edit Icon</string>
    <string name="Personal_details">Personal details</string>
    <string name="location_icon">Location Icon</string>
    <string name="saved_page">saved_page</string>
    <string name="community_page">community_page</string>
    <string name="commision">commision</string>
    <string name="by_withdrawing_you_agree_with_the_terms_of_use">By withdrawing you agree with the Terms of use</string>
    <string name="add_money">Add Money</string>
    <string name="egp_00">EGP 00</string>
    <string name="medium_businesses">Medium businesses</string>
    <string name="_30_850_00">$30,850.00</string>
    <string name="withdraw">Withdraw</string>
    <string name="banque_misr">Banque Misr</string>
    <string name="masr_el_n_kheir">Masr El\n Kheir</string>
    <string name="_57357_nhospital">57357\nHospital</string>
    <string name="categories">Categories</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="select_a_cause">Select a Cause</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_an_amount_5_60000_egp">Enter an Amount (5-60000)EGP</string>
    <string name="choose">Choose</string>
    <string name="legal_disclaimerthis_application_has_been_developed_as_a_platform_for_revenue_based_funding_donation_based_and_rewards_based_crowdfunding_only_we_do_not_provide_any_services_related_to_equity_financing_loans_or_direct_financial_investments_all_campaigns_displayed_on_the_platform_are_the_responsibility_of_their_owners_and_users_are_advised_to_verify_the_credibility_of_the_project_before_contributing_we_comply_with_all_applicable_laws_and_regulations_and_we_do_not_bear_any_legal_responsibility_for_the_misuse_of_the_platform_by_external_parties_by_using_the_platform_you_agree_to_our_terms_and_conditions_and_privacy_policy">Legal DisclaimerThis application has been developed as a platform for Revenue based funding, donation-based and rewards-based crowdfunding only. We do not provide any services related to equity financing, loans, or direct financial investments. All campaigns displayed on the platform are the responsibility of their owners, and users are advised to verify the credibility of the project before contributing. We comply with all applicable laws and regulations, and we do not bear any legal responsibility for the misuse of the platform by external parties. By using the platform, you agree to our terms and conditions and privacy policy.</string>
    <string name="accept">Accept</string>
    <string name="privacy_policies">Privacy Policies</string>
    <string name="magdi_nyacoub">Magdi\nyacoub</string>
    <string name="alnas_nhospital">AlNas\nHospital</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="coins">coins</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="phone">Phone</string>
    <string name="classification">Classification</string>
    <string name="reject">Reject</string>
    <string name="please_enter_your_email_and_we_will_send_an_otp_code_in_the_next_step_to_reset_your_password">Please enter your email and we will send an OTP code in the next step to reset your password</string>
    <string name="send_link">Send Link</string>
    <string name="settings">settings</string>
    <string name="reset_your_password">Reset Your Password</string>
    <string name="otp">otp</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="didn_t_receive_a_code">Didn\'t receive a code?</string>
    <string name="you_can_resend_code_in_50s">You can resend code in 50s</string>
    <string name="create_new_password_if_you_forget_it_then_you_have_to_do_forgot_password">Create new password. if you forget it, then you have to do forgot password</string>
    <string name="create_new_password">Create New Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="udemy">Udemy</string>
    <string name="revenue_share_payments_will_be_made_monthly_based_on_the_company_s_actual_collected_revenues_n_n_payments_will_continue_until_the_investor_receives_150_of_the_original_investment_n_n_there_is_no_fixed_timeline_as_payments_depend_on_the_company_s_performance">• Revenue share payments will be made monthly, based on the Company’s actual collected revenues.\n\n• Payments will continue until the Investor receives 150% of the original investment.\n\n• There is no fixed timeline, as payments depend on the Company’s performance.</string>
    <string name="company">company</string>
    <string name="Invest">INVEST</string>
    <string name="cup">cup</string>
    <string name="national">national</string>
    <string name="save">save</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="card">card</string>
    <string name="egp_7200">EGP 7200</string>
    <string name="instapay">InstaPay</string>
    <string name="add_cash_through_instapay">Add cash through InstaPay</string>
    <string name="arrow">arrow</string>
    <string name="add_cash_through_vodafone">Add cash through Vodafone</string>
    <string name="vodafone">vodafone</string>
    <string name="use_a_debit_credit_card">Use a debit/credit card</string>
    <string name="select_a_method">Select a method</string>
</resources>