<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DonationPaymentMethodsActivity">

    <FrameLayout
        android:id="@+id/campaign_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/frame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/frame"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_a_method"
                android:textColor="@color/black1"
                android:fontFamily="@font/open_sans_bold"
                android:textSize="20sp"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/card"
                android:src="@drawable/card_method"
                android:background="@drawable/card_bg"
                android:layout_gravity="start"
                android:padding="12dp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_a_debit_credit_card"
                android:textSize="20sp"
                android:layout_marginTop="-35dp"
                android:textColor="@color/black1"
                android:fontFamily="@font/open_sans_semibold" />
            <ImageButton
                android:id="@+id/card_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/arrow"
                android:src="@drawable/arrow_side"
                android:background="@color/transparent_black"
                android:layout_gravity="end"
                android:padding="12dp"
                android:layout_marginTop="-35dp"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/vodafone"
                android:src="@drawable/vodafone_method"
                android:background="@color/transparent_black"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_cash_through_vodafone"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="-35dp"
                android:textColor="@color/black1"
                android:fontFamily="@font/open_sans_semibold" />
            <ImageButton
                android:id="@+id/vodafone_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/arrow"
                android:src="@drawable/arrow_side"
                android:background="@color/transparent_black"
                android:layout_gravity="end"
                android:padding="12dp"
                android:layout_marginTop="-35dp"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/instapay"
                android:src="@drawable/insta_pay_method"
                android:background="@color/transparent_black"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_cash_through_instapay"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="-35dp"
                android:textColor="@color/black1"
                android:fontFamily="@font/open_sans_semibold" />
            <ImageButton
                android:id="@+id/insta_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/arrow"
                android:src="@drawable/arrow_side"
                android:background="@color/transparent_black"
                android:layout_gravity="end"
                android:padding="12dp"
                android:layout_marginTop="-35dp"/>
        </LinearLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>