<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.Account_Activity"
    android:background="@drawable/main_bg">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/back_btn"
        android:contentDescription="@string/back"
        android:padding="10dp"
        android:src="@drawable/back"
        app:layout_constraintBottom_toTopOf="@id/profileCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/account_title"
        android:textColor="@color/black1"
        android:textSize="20sp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/backButton"
        app:layout_constraintBottom_toTopOf="@id/profileCard"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.cardview.widget.CardView
            android:id="@+id/profileCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="12dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp">
                <ImageView
                    android:id="@+id/profileImage"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/profile"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/profile_image_description"
                    android:background="@drawable/circle"
                    android:scaleType="centerCrop" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/userName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/open_sans_bold"
                            android:text="@string/user_name"
                            android:textSize="18sp" />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/verified"
                            android:contentDescription="@string/verified_icon"
                            android:layout_marginStart="4dp" />
                    </LinearLayout>
                    <TextView
                        android:id="@+id/userEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/user_email"
                        android:fontFamily="@font/open_sans_semibold"
                        android:textSize="14sp"
                        android:textColor="@color/gray" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            tools:listitem="@layout/item_account"
            android:descendantFocusability="blocksDescendants"
            app:layout_constraintTop_toBottomOf="@id/profileCard"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>